justify bio text

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -62,7 +62,8 @@ html{
     float: right;
     padding: 30px;
     margin: 20px;
-
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .foot{
